tests/NormalTests/paczka1/fuzzy1/61298742.err
Error in line 1: V9rV A38 47,7
Error in line 4: s2B996G1BDM S486 98,0
Error in line 6: s2B996G1BDM S175 48,4
Error in line 9: xeFfrJB S486 25,6
Error in line 15: xeFfrJB A185 42,4
Error in line 27: V9rV A185 361,74
Error in line 28: s2B996G1BDM S486 -4,1
Error in line 20: s2B996G1BDM S486 98,0
Error in line 2: V9rV A185 99,0
Error in line 33: xeFfrJB S175 27,4
Error in line 30: s2B996G1BDM S175 20,7
Error in line 36: xeFfrJB S486 91,0
